core/testing/snapshots/functions/values.snap
### TITLE ###
Values function
### INPUT ###
a = { "alice": "foo", "bob": "bar" }
b = values(a)
print(b)
print(upper(b[0]))
print(values({}))
### STDOUT ###
[ "foo", "bar" ]
FOO
[ ]

### TITLE ###
Values errors if given string
### INPUT ###
values("foo")
### STDERR ###
error[RAD30001]: Argument type 'str' is not assignable to expected type 'map'
  --> <script>:1:8
  |
1 | values("foo")
  |        ^^^^^
  |
   = info: rad docs RAD30001


### EXIT ###
1
### TITLE ###
Values errors if given no args
### INPUT ###
values()
### STDERR ###
error[RAD30007]: Missing required argument '_map'
  --> <script>:1:1
  |
1 | values()
  | ^^^^^^^^
  |
   = info: rad docs RAD30007


### EXIT ###
1
### TITLE ###
Values errors if given more than one arg
### INPUT ###
values({}, {})
### STDERR ###
error[RAD30007]: Expected at most 1 args, but was invoked with 2
  --> <script>:1:1
  |
1 | values({}, {})
  | ^^^^^^^^^^^^^^
  |
   = info: rad docs RAD30007


### EXIT ###
1
